# trapfuzzer

./: README.MD  config.json  requirements.txt  trap_fuzzer.py
database/: seed.py
mutator/: custom.py  honggfuzz.py  memory_mutator.py  radamsa.py
tracer/: DynamorioTracer.py  PythonPtraceTracer.py  WinappdbgAgent.py  WinappdbgCSTracer.py  WinappdbgTracer.py  WindbgExtTracer.py  cmd.gdb  common.py  gdbtracer.py  runcmd.gdb  runtrap.py  trap.py
tracer/dy_bin_cov/: CMakeLists.txt  README.md  bin_coverage.c
utils/: auto_win.py  bb-patcher.py  bb.bt  dump_bb.py  file_trace.py  fuzzer-cleaner.py  parse-bincov-output.py  setbp.py
utils/libheapasan/: heapasan.c  salmalloc.c  salmalloc.h  test.c
utils/reproducer/: cdb-reproducer.py  pycdb.py
